bpo-40555: Check for p->error_indicator in loop rules after the main loop is done